the panel title can be update giving two clicks on the name